--- a/scss/style.scss
+++ b/scss/style.scss
@@ -274,7 +274,8 @@ body {
       }
     }
 
-    & button:not(:last-of-type) {
+    & .buttons button:not(:last-of-type),
+    & .icons a:not(:last-of-type) {
       margin-right: 1.3rem;
     }
 
@@ -288,6 +289,10 @@ body {
       border-radius: 4px;
       border: none;
       outline: none;
+    }
+
+    & .icons a{
+      color: #1a173b;
     }
   }
 
